src/objects/sfsp__SalesAssignmentObject__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Label__c</fullName>
        <label>Label</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__ReferenceFields__c</fullName>
        <description>JSON array of selected reference fields</description>
        <label>Reference Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Sales Assignment Objects</relationshipLabel>
        <relationshipName>SalesAssignmentObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Assignment Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Assignment Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>